<resources>
    <string name="app_name">ADVA</string>
    <string name="facebook_app_id" translatable="false">272708674036239</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb272708674036239s</string>
    <string name="fb_secret" translatable="false">9037133f5c7225fab58e7c3bb0a3cab5</string>
    <string name="no_data">No data</string>
    <string name="search_salamtak">Search ...</string>
    <string name="search_error">Search error</string>
    <string name="no_internet">Please check your internet connection and try again</string>
    <string name="network_error">Network error, couldn\'t get data,please try again!</string>
    <string name="get_started">Get started</string>
    <string name="offers_and_discounts">Offers and discounts</string>
    <string name="onboarding_home_visits_text">You can install your operation with the least procedures, within 48 hours and up to 60 months.</string>
    <string name="onboarding_discounts_text">Enjoy our exclusive offers from our different medical providers and redeem your voucher at anytime</string>
    <string name="ask_for_a_home_visit">Tailored Installment Plans</string>
    <string name="search_doctors_and_medical_services">Offers and discounts</string>
    <string name="choose_ur_installment_plan">Install Your Operation</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="installment">Installments</string>
    <string name="surgical_procedures_paid_on_installments">Pay your operation on flexible installment plans</string>
    <string name="discounts">Discount Card</string>
    <string name="the_best_deals_just_for_you">The best deals just for you in consultaions, labs and scans</string>
    <string name="home_visits">Home Visits</string>
    <string name="a_specialist_consultation_in_the_comfort_of_your_own_home">A specialist\'s consultation in the comfort of your home.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_r">Password*</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Signin</string>
    <string name="welcome">Welcome to ADVA</string>
    <string name="invalid_password_lenght">Password must be >%1$d characters</string>
    <string name="invalid_password">Invalid password</string>
    <string name="invalid_first_name">Invalid first name</string>
    <string name="invalid_last_name">Invalid last name</string>
    <string name="invalid_username">Invalid username</string>
    <string name="required_password">Password is required</string>
    <string name="required_first_name">First name is required</string>
    <string name="required_last_name">Last name is required</string>
    <string name="required_username">Username is required</string>
    <string name="required_mobile_number">Phone number is required</string>
    <string name="required_email_address">Email address is required</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Signup</string>
    <string name="sign_up_underlined"><u>Signup</u></string>
    <string name="welcome_to_salamtak">Welcome to ADVA</string>
    <string name="enter_cred">Enter your username and password</string>
    <string name="invalid_mobile_number">Phone number is invalid</string>
    <string name="required">Required</string>
    <string name="email_r">Email Address</string>
    <string name="invalidEmailAddress">Email address is invalid</string>
    <string name="require_field">This field is required</string>
    <string name="require_name_grade">Name and grade are required</string>
    <string name="NewPasswordLessThan4">Password must be at least 8 characters</string>
    <string name="forget_pass_underlined"><u>Forgot your password?</u></string>
    <string name="forget_pass">Forgot your password?</string>
    <string name="or">Or</string>
    <string name="continue_with_gmail">Continue with Gmail</string>
    <string name="continue_with_facebook">Continue with facebook</string>
    <string name="title_activity_login2">Signin</string>
    <string name="home_page">Home</string>
    <string name="all_categories">All categories</string>
    <string name="monthly_installment">Monthly Installment</string>
    <string name="from">from</string>
    <string name="book_now">Book now</string>
    <string name="filter_results">Filter results</string>
    <string name="select_category">Select category</string>
    <string name="search_by_hospital_or_dr">Search by operation, hospital or doctor</string>
    <string name="choose_location">Choose location</string>
    <string name="search">Search</string>
    <string name="_12_36_months_conditions_apply">%1$s-%2$s Months-conditions apply</string>
    <string name="location">Location</string>
    <string name="locations">Locations</string>
    <string name="view_location">View location</string>
    <string name="overview">Overview</string>
    <string name="load_more">Load more</string>
    <string name="with_dr">With DR: %1$s</string>
    <string name="price">%1$s EGP</string>
    <string name="expect_call">Thank you for booking with ADVA, we will contact you within 48 hours. For further inquiries, please call <b>15864</b>

</string>
    <string name="request_submitted">Request submitted!</string>
    <string name="complete_your_profile">Complete your financial information</string>
    <string name="Egp">EGP</string>
    <string name="months">Months</string>
    <string name="your_booking">Your Booking</string>
    <string name="down_payment_min">Down Payment (min)</string>
    <string name="monthly_amount">%1$s/month</string>
    <string name="egp_amount">%1$s EGP</string>
    <string name="payment_plans_may_vary_depending_on_your_lending_ability">Installments amount may vary according to customer’s financial information</string>
    <string name="submit">Add to Cart</string>
    <string name="mark_your_preferred_plan">Choose your preferred plan</string>
    <string name="search_by_price">Search by price</string>
    <string name="sign_in">Login</string>
    <string name="sign_in_underlined"><u>Login</u></string>
    <string name="welcome_wink">Welcome to ADVA</string>
    <string name="sign_up_to_continue">Signup</string>
    <string name="full_name">Full name</string>
    <string name="agree_to_our_terms_amp_conditions">I agree on the</string>
    <string name="register">Register</string>
    <string name="password_dont_match">Passwords don\'t match</string>
    <string name="invalid_email">Invalid email</string>
    <string name="looking_for_available_dr">Looking for an available doctor, and we\'ll get back to you.</string>
    <string name="go_to_home_page">Go to home page</string>
    <string name="financial_info">Financial Information</string>
    <string name="bank">Bank</string>
    <string name="work">Work</string>
    <string name="id">ID</string>
    <string name="credit_card">Credit card</string>
    <string name="bank_info">Bank info</string>
    <string name="my_profile">My Profile</string>
    <string name="operation_Installment_cost">%1$s EGP - %2$s EGP</string>
    <string name="phone">Phone Number</string>
    <string name="phone_r">Phone Number*</string>
    <string name="confirm_password">Confirm password</string>
    <string name="confirm_password_r">Confirm Password*</string>
    <string name="must_agree_on_terms">You must accept terms amp conditions</string>
    <string name="next">Next</string>
    <string name="company_name_required">Company Name*</string>
    <string name="hiring_date">Hiring date</string>
    <string name="net_salary">Net salary</string>
    <string name="building">Building number</string>
    <string name="street">Street</string>
    <string name="district">District</string>
    <string name="profession">Profession</string>
    <string name="number_of_children">Number of childrens</string>
    <string name="marital_status">Marital status*</string>
    <string name="club_membership">Club Membership</string>
    <string name="are_you_egyptian">Egyptian?</string>
    <string name="yes">yes</string>
    <string name="provide_us_with_your_passport_or_national_id">Provide us with Your Passport or National ID</string>
    <string name="national_id">National ID</string>
    <string name="passport_number">Passport number</string>
    <string name="id_number">ID Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="residential_status">Residential Status</string>
    <string name="second_name">Second Name</string>
    <string name="first_name">First Name</string>
    <string name="first_name_r">First Name*</string>
    <string name="last_name">Last Name</string>
    <string name="last_name_r">Last Name*</string>
    <string name="address">Address</string>
    <string name="username">Username</string>
    <string name="invalid_car_year">Invalid Car Manufacturing Year</string>
    <string name="invalid_children_number">Number Of Children Required</string>
    <string name="employment_info_updated_successfully">Employment info updated successfully</string>
    <string name="bank_info_updated_successfully">Bank financial info updated successfully</string>
    <string name="basic_info_updated_successfully">Basic profile info updated successfully</string>
    <string name="third_name">Third name</string>
    <string name="chronic_diseases">Chronic diseases</string>
    <string name="select_all">Select all</string>
    <string name="medical_history">Medical History</string>
    <string name="please_agree">Please agree on the terms and conditions</string>
    <string-array name="profile_names">
        <item>Bank</item>
        <item>Work</item>
        <item>Id</item>
    </string-array>
    <string-array name="years">
        
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
    </string-array>
    <string-array name="paymentMethods">
        <item>Cash</item>
        <item>Card</item>
    </string-array>
    <string name="date_time_value">%1$d/%2$d/%3$d</string>
    <string name="passport_type">Passport</string>
    <string name="branches">Branches</string>
    <string name="your_home_visits_will_appear_here">Your home visit requests will be displayed here</string>
    <string name="car_model">Car Brand</string>
    <string name="your_message">Your message</string>
    <string name="send">Send</string>
    <string name="send_your_message">Your message</string>
    <string name="or_call_us_01202777705">Or Call us: 15864</string>
    <string name="no_credit_cards">No credit cards</string>
    <string name="job_required">Job*</string>
    <string name="employee">Employee</string>
    <string name="net_income_required">Net Income*</string>
    <string name="company_address_required">Company Address*</string>
    <string name="job">job</string>
    <string name="net_income">Net income</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="clear_all">Clear All</string>
    <string name="type">Type:</string>
    <string name="services">Services</string>
    <string name="requests">Requests</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
</resources>