<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_8sdp"
    android:layoutDirection="locale"
    android:background="@drawable/bg_curved_primary_light"
    android:padding="@dimen/_8sdp">

    <TextView
        android:id="@+id/tv_price_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView style="@style/ImageViewStyle"
        android:id="@+id/iv_car_services"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_55sdp"
        android:background="@drawable/ic_circle_shadowed"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@id/iv_car_locations"
        app:layout_constraintStart_toEndOf="@id/tv_price_lbl"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_car_services" />

    <TextView
        android:id="@+id/tv_car_services"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="1"
        android:text="@string/services"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="@id/iv_car_services"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/iv_car_services"
        app:layout_constraintTop_toBottomOf="@id/iv_car_services" />


    <androidx.appcompat.widget.AppCompatImageView style="@style/ImageViewStyle"
        android:id="@+id/iv_car_locations"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_55sdp"
        android:background="@drawable/ic_circle_shadowed"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@id/iv_car_brands"
        app:layout_constraintStart_toEndOf="@id/iv_car_services"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_car_location" />

    <TextView
        android:id="@+id/tv_car_locations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="1"
        android:text="@string/location"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="@id/iv_car_locations"
        app:layout_constraintStart_toStartOf="@id/iv_car_locations"
        app:layout_constraintTop_toBottomOf="@id/iv_car_locations" />


    <androidx.appcompat.widget.AppCompatImageView style="@style/ImageViewStyle"
        android:id="@+id/iv_car_brands"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_55sdp"
        android:background="@drawable/ic_circle_shadowed"
        android:padding="@dimen/_10sdp"
        app:layout_constraintEnd_toStartOf="@id/tv_clear_all"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toEndOf="@id/iv_car_locations"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_car_brand" />

    <TextView
        android:id="@+id/tv_clear_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear_all"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_car_brands"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:lines="1"
        android:text="@string/car_model"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="@id/iv_car_brands"
        app:layout_constraintStart_toStartOf="@id/iv_car_brands"
        app:layout_constraintTop_toBottomOf="@id/iv_car_brands" />

</androidx.constraintlayout.widget.ConstraintLayout>