<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layoutDirection="locale"
    android:layout_height="wrap_content">

  <androidx.appcompat.widget.AppCompatImageView style="@style/ImageViewStyle"
      android:id="@+id/iv_icon"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:srcCompat="@drawable/ic_payment_empty"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_chainStyle="packed" />


  <TextView
      android:id="@+id/tv_1"
      style="@style/textViewStyle.Title.Big"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_16sdp"
      android:text="@string/no_credit_cards"
      android:textSize="@dimen/text_size_larger"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/iv_icon" />

  <TextView
      android:id="@+id/text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:paddingStart="@dimen/_32sdp"
      android:paddingEnd="@dimen/_32sdp"
      android:text="@string/your_home_visits_will_appear_here"
      android:visibility="gone"
      android:textColor="@color/textColorLight"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_1" />

  <Button
      android:id="@+id/btn_home_visits"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="@dimen/_55sdp"
      android:layout_marginTop="@dimen/_32ssp"
      android:layout_marginEnd="@dimen/_55sdp"
      android:layout_marginBottom="@dimen/_8sdp"
      android:text="@string/home_visits"
      android:visibility="gone"
      app:layout_constraintTop_toBottomOf="@id/text"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>